--- a/frontend/stylesheets/stylesheet.css
+++ b/frontend/stylesheets/stylesheet.css
@@ -1,19 +1,103 @@
-button {
+body {
     text-align: center;
 }
 
-#datasetDownloadDiv {
-    visibility: hidden;
+text {
+    font-family: sans-serif;
+}
+  
+legend {
+    background-color: white;
+    padding: 5px 10px;
+    margin: 5px;
+}
+  
+input {
+    margin: 5px;
+    align-items: center;
 }
 
-#progressDiv {
-    visibility: hidden;
+label {
+    margin: 5px;
+}
+
+form {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid #ccc;
+}
+
+ul {
+    list-style-type: none;
+    margin: 5px;
+    padding: 5px;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+}
+
+button {
+  appearance: none;
+  background-color: #FAFBFC;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
+  box-sizing: border-box;
+  color: #24292E;
+  cursor: pointer;
+  display: inline-block;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  margin: 5px;
+  padding: 6px 16px;
+  position: relative;
+  transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  word-wrap: break-word;
+}
+
+button:hover {
+  background-color: #e1e1e2;
+  text-decoration: none;
+  transition-duration: 0.1s;
+}
+
+button:disabled {
+  background-color: #FAFBFC;
+  border-color: rgba(27, 31, 35, 0.15);
+  color: #959DA5;
+  cursor: default;
+}
+
+button:active {
+  background-color: #e5e7e9;
+  box-shadow: rgba(225, 228, 232, 0.2) 0 1px 0 inset;
+  transition: none 0s;
+}
+
+button:focus {
+  outline: 1px transparent;
+}
+
+button:before {
+  display: none;
+}
+
+button:-webkit-details-marker {
+  display: none;
 }
 
 .switch {
     --inactive-bg: #cfd8dc;
-    --active-bg: #00e676;
-    --size: 2rem;
+    --active-bg: #000000;
+    --size: 1rem;
     appearance: none;
     width: calc(var(--size) * 2.2);
     height: var(--size);
@@ -25,13 +109,53 @@ button {
         circle calc(var(--size) / 2.1),
         #fff 100%,
         #0000 0
-      ),
-      radial-gradient(circle calc(var(--size) / 1.5), #0003 0%, #0000 100%);
+    ),
+    radial-gradient(circle calc(var(--size) / 1.5), #0003 0%, #0000 100%);
     background-repeat: no-repeat;
     background-position: calc(var(--size) / -1.75) 0;
     transition: background 0.2s ease-out;
-  }
-  .switch:checked {
+}
+.switch:checked {
     background-color: var(--active-bg);
     background-position: calc(var(--size) / 1.75) 0;
+}
+
+.menu {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    display: block;
+    overflow: hidden;
+}
+
+.startScraper:hover {
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    transition-duration: 0.7s;
+}
+
+.download {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 20px;
   }
+  
+.download:hover {
+    background-color: RoyalBlue;
+}
+
+#datasetDownloadDiv {
+    visibility: hidden;
+    margin: 10px;
+}
+
+#progressDiv {
+    visibility: hidden;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
