(chore) updated main menu UI
Signed-off-by: Alexander Gemmingen <alexander.gemmingen@gmx.de>

--- a/frontend/stylesheets/stylesheet.css
+++ b/frontend/stylesheets/stylesheet.css
@@ -127,6 +127,10 @@ button:-webkit-details-marker {
   overflow: hidden;
 }
 
+.menu button {
+  width: 300px;
+}
+
 .startScraper:hover {
   background-color: black;
   color: white;
