--- a/frontend/stylesheets/stylesheet.css
+++ b/frontend/stylesheets/stylesheet.css
@@ -173,9 +173,11 @@ button:-webkit-details-marker {
 
 .display {
   margin: auto;
-  width: 50%;
+  width: 75%;
   padding: 10px;
-  border: #000000 1px solid;
+  border: 1px solid #ccc;
+  background-color: #f2f2f2;
+
 }
 
 #datasetDownloadDiv {
