--- a/frontend/stylesheets/stylesheet.css
+++ b/frontend/stylesheets/stylesheet.css
@@ -14,8 +14,10 @@ legend {
 }
 
 input {
+  font-size: 1rem;
   margin: 5px;
-  align-items: center;
+  padding: 0.5rem 0.6rem;
+  width: 20rem;
 }
 
 label {
@@ -28,6 +30,9 @@ form {
   padding: 20px;
   margin: 10px;
   border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 ul {
@@ -49,12 +54,12 @@ button {
   cursor: pointer;
   display: inline-block;
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 20px;
   list-style: none;
   margin: 5px;
-  padding: 6px 16px;
+  padding: 0.5rem 0.6rem;
   position: relative;
   transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
   user-select: none;
@@ -62,6 +67,11 @@ button {
   touch-action: manipulation;
   white-space: nowrap;
   word-wrap: break-word;
+}
+
+button.centeredButton {
+  margin: 0.5rem auto 0 auto;
+  display: block;
 }
 
 button:hover {
@@ -98,7 +108,7 @@ button:-webkit-details-marker {
 .switch {
   --inactive-bg: #cfd8dc;
   --active-bg: #000000;
-  --size: 1rem;
+  --size: 1.2rem;
   appearance: none;
   width: calc(var(--size) * 2.2);
   height: var(--size);
